--- a/TXHConductFinancialTransactions/TXHConductFinancialTransactionsLastFile/TXHConductFinancialTransactions/Info.plist
+++ b/TXHConductFinancialTransactions/TXHConductFinancialTransactionsLastFile/TXHConductFinancialTransactions/Info.plist
@@ -16,7 +16,7 @@
 	<key>CFBundleGetInfoString</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<string>com.aiben123.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
